<resources>
    <string name="app_name">NUMADSp22_Quester_Final_Project</string>
    <string name="log_reg_btn">Register</string>
    <string name="login_text">Login</string>
    <string name="login_btn">Login</string>
    <string name="prompt_username">Enter Username Here</string>
    <string name="reg_txt">Register</string>
    <string name="reg_login_text">Login</string>
    <string name="reg_btn">Register</string>
    <string name="prompt_password">Enter Password Here</string>
    <string name="prompt_conf_password">Confirm Password</string>
    <string name="prompt_email">Enter Email/Username Here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_Pass">Reset Password</string>
    <string name="back">Back</string>
    <string name="log_out">Log Out</string>
    <string name="activity_location_image">Activity Location Image</string>
    <string name="quest_name">Quest Name:</string>
    <string name="participant_s">Participant(s):</string>
    <string name="activities">Activities:</string>
    <string name="google_maps_logo">google maps logo</string>
    <string name="view_quest_recap">View Quest Recap</string>
    <string name="create_quest_recap">Create Quest Recap</string>
    <string name="create_new_quest">Create New Quest</string>
    <string name="templates">Templates:</string>
    <string name="choose_a_template"><u>Select A Template</u></string>
    <string name="next">Next</string>
    <string name="your_recaps"><u>Your Recaps</u></string>
    <string name="recap">Recap</string>
    <string name="view_all_recaps">View All Recaps</string>
    <string name="no_template_selected">No Template Selected</string>
    <string name="_3_photo_limit">3 Photo Limit</string>
    <string name="select_photos"><u>Select Images For Recap</u></string>
    <string name="share">SHARE</string>
    <string name="toolbarTitle">toolbar title</string>
    <string name="del">del</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="finish">finish</string>
    <string name="select">Select</string>
    <string name="change_background_color">change Background color</string>
    <string name="start_location_placeholder">Where do you want to start?</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_quests">My Quests</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="num_participants"># of Participants: %o</string>
    <string name="num_activities"># of Activities: %o</string>
    <string name="description">Quest Location Image</string>
    <string name="no_quests_message">No Quests Created Yet!</string>

    <string name="user_profile">My Profile</string>
    <string name="current_settings">Current Username &amp; Password</string>
    <string name="current_email">Email: %s</string>
    <string name="current_username">Username: %s</string>
    <string name="current_password">Password: %s</string>
    <string name="view_password">View Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="update_settings">Update Username &amp; Password</string>
    <string name="save">Save</string>
    <string name="create_quest">Create Quest</string>

    <string name="you_searched">You searched:</string>
    <string name="take_photo_button">TAKE PHOTO</string>
    <string name="next_stop_button">NEXT STOP</string>
    <string name="exit_button">EXIT</string>
    <string name="quest_cancel_button">Cancel Quest</string>
    <string name="quest_save_button">Return to My Quests</string>
    <string name="quest_finish_button">Finish Quest</string>
    <string name="previous_stop">Previously:</string>
    <string name="current_stop">Current Stop:</string>
    <string name="up_next">Coming up:</string>
    <string name="last_stop">Last Stop:</string>
    <string name="active_quest_header">Active Quest</string>
    <string name="invite_your_friends">Join Code:</string>

    <string name="recap_name">Recap Name:</string>
    <string name="date_generated">Date Generated:</string>
    <string name="no_recaps_available">No Recaps Available</string>
    <string name="settings">Settings</string>
    <string name="recaps">Recaps</string>
    <string name="home">Home</string>
    <string name="create_quest">Create Quest</string>
    <string name="quests">Quests</string>
    <string name="profile">profile</string>
    <string name="active_quest">Active Quest</string>
    <string name="save">Save</string>
    <string name="user_profile">My Profile</string>
    <string name="current_settings">Current Username &amp; Password</string>
    <string name="current_email">Email: %s</string>
    <string name="current_username">Username: %s</string>
    <string name="current_password">Password: %s</string>
    <string name="view_password">View Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="update_settings">Update Username &amp; Password</string>
    <string name="new_email">New Email</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="new_quest">New Quest</string>
</resources>