<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Templates.ChoosePhotos">
    <TextView
        android:id="@+id/selPhotosLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_photos"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/L1"
        android:layout_width="408dp"
        android:layout_height="841dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selPhotosLabel">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="147dp"
            android:layout_height="147dp"
            android:layout_alignStart="@+id/imageView4"
            android:layout_alignBottom="@+id/imageView4"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="14dp"
            android:contentDescription="@string/image3"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:srcCompat="@drawable/box"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="147dp"
            android:layout_height="147dp"
            android:layout_alignEnd="@+id/imageView4"
            android:layout_alignBottom="@+id/imageView4"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="107dp"
            android:contentDescription="@string/image2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/box" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="147dp"
            android:layout_height="147dp"
            android:layout_above="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="22dp"
            android:contentDescription="@string/image1"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:srcCompat="@drawable/box" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="362dp"
            android:layout_height="353dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="26dp"
            android:contentDescription="@string/recap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/box"
            android:background="@color/black"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange_500"
            android:onClick="delete"
            android:text="@string/del"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>